--- a/backend/package.json
+++ b/backend/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/willshiao/node-music-alarm/issues"
   },
-  "homepage": "https://github.com/willshiao/node-music-alarm#readme"
+  "homepage": "https://github.com/willshiao/node-music-alarm#readme",
+  "dependencies": {
+    "config": "^1.24.0",
+    "express": "^4.14.0",
+    "winston": "^2.3.0"
+  }
 }
