--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "config": "^1.24.0",
     "express": "^4.14.0",
+    "sqlite": "^2.2.2",
+    "sqlite3": "^3.1.8",
     "winston": "^2.3.0"
   }
 }
