--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "config": "^1.24.0",
     "express": "^4.14.0",
     "node-omxplayer": "^0.4.1",
+    "node-schedule": "^1.2.0",
     "sqlite": "^2.2.2",
     "sqlite3": "^3.1.8",
     "winston": "^2.3.0"
