--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/willshiao/node-music-alarm#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "config": "^1.24.0",
     "express": "^4.14.0",
