feat(site): add navbar and bootstrap

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.5",
     "vue": "^2.0.1",
-    "vue-router": "^2.0.1"
+    "vue-router": "^2.0.1",
+    "vue-tables-2": "^0.2.4"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -18,6 +20,7 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "style-loader": "^0.13.1",
     "vue-loader": "^9.7.0",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.0"
