--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "config": "^1.24.0",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "node-omxplayer": "^0.4.1",
     "node-schedule": "^1.2.0",
