chore(site): add eslint as dev dependency

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -3,11 +3,13 @@
   "env": {
     "node": true,
     "es6": true,
-    "mocha": true
+    "mocha": true,
+    "browser": true
   },
   "plugins": [
-    "vue"
+    "html"
   ],
+  "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module"
   },
