--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
+    "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.0.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -23,6 +24,8 @@
     "babel-preset-es2015": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "eslint": "^3.11.1",
+    "eslint-plugin-html": "^1.7.0",
     "file-loader": "^0.9.0",
     "style-loader": "^0.13.1",
     "vue-loader": "^9.7.0",
