--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.11.1",
+    "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-html": "^1.7.0",
+    "eslint-plugin-import": "^2.2.0",
     "file-loader": "^0.9.0",
     "style-loader": "^0.13.1",
     "vue-loader": "^9.7.0",
