--- a/backend/package.json
+++ b/backend/package.json
@@ -33,5 +33,10 @@
     "sqlite": "^2.2.2",
     "sqlite3": "^3.1.8",
     "winston": "^2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.11.1",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
