--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.15.2",
     "bootstrap": "^4.0.0-alpha.5",
+    "sweetalert": "^1.1.3",
     "vue": "^2.0.1",
     "vue-router": "^2.0.1",
     "vue-tables-2": "^0.2.4"
