--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "axios": "^0.15.2",
     "bootstrap": "^4.0.0-alpha.5",
-    "sweetalert": "^1.1.3",
     "vue": "^2.0.1",
     "vue-router": "^2.0.1",
+    "vue-sweetalert": "^0.1.16",
     "vue-tables-2": "^0.2.4"
   },
   "devDependencies": {
@@ -21,8 +21,10 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.0.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-plugin-transform-vue-jsx": "^3.1.2",
     "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.18.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.11.1",
