--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "config": "^1.24.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "multer": "^1.2.0",
     "node-omxplayer": "^0.4.1",
