--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.2.0",
     "node-omxplayer": "^0.4.1",
     "node-schedule": "^1.2.0",
+    "sequelize": "^4.1.0",
     "sqlite": "^2.2.2",
     "sqlite3": "^3.1.8",
     "winston": "^2.3.0"
