--- a/backend/package.json
+++ b/backend/package.json
@@ -34,8 +34,9 @@
     "node-omxplayer": "^0.4.1",
     "node-schedule": "^1.2.0",
     "sequelize": "^4.1.0",
+    "socket.io": "^2.0.3",
     "sqlite": "^2.2.2",
-    "sqlite3": "^3.1.8",
+    "sqlite3": "^3.1.9",
     "winston": "^2.3.0"
   },
   "devDependencies": {
